--- a/calculation.ipynb
+++ b/calculation.ipynb
@@ -35,16 +35,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "id": "e36334be",
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "50\n"
+     ]
+    }
+   ],
    "source": [
-    "span = 50\n",
+    "if False:\n",
+    "    allinput()\n",
+    "\n",
+    "df=pd.read_excel('Saved Inputs/span.xlsx',index_col=None,header=None)\n",
+    "span = int(df.iloc[2])\n",
+    "\n",
     "c_c = 1.5"
    ]
   },
@@ -1033,7 +1046,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.8.6"
   }
  },
  "nbformat": 4,
