Self load moments.

--- a/Abutment.ipynb
+++ b/Abutment.ipynb
@@ -44,28 +44,24 @@
    ],
    "source": [
     "import pandas as pd\n",
+    "import numpy as np\n",
     "from bridge_specs import box\n",
     "from Cross import calc_centroid as cg\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 2,
    "id": "2bf4b55f",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1.28333\n",
-      "0.4083300000000001\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "def loader(unit_wt, length, width, height):\n",
-    "    load = unit_wt*length*width*height\n",
+    "def loader(unit_wt, length, width, height, type):\n",
+    "    if type == 'r':\n",
+    "        load = unit_wt*length*width*height\n",
+    "    elif type == 't':\n",
+    "        load = unit_wt*length*width*height*0.5\n",
+    "    \n",
     "    return load\n",
     "def z(base, clr, width, x, type):\n",
     "    \"\"\"base = width of base along with taper\n",
@@ -76,20 +72,15 @@
     "    y = []\n",
     "    if type == 'r':\n",
     "        y.append(cg('rectangle',[width,0],[x,0]))\n",
-    "        print(y[0][0])\n",
     "        return (-(clr+base/2)+y[0][0])\n",
     "    y = []\n",
     "    if type == 't1':\n",
     "        y.append(cg('triangle_2',[width,0],[x,0]))\n",
-    "        print(y[0][0])\n",
     "        return (-(clr+base/2)+y[0][0])\n",
     "    y = []\n",
     "    if type == 't2':\n",
     "        y.append(cg('triangle_1',[width,0],[x,0]))\n",
-    "        return (-(clr+base/2)+y[0][0])\n",
-    "               \n",
-    "\n",
-    "print(z(1.35,0.2,0.1,1.25,'t1'))    "
+    "        return (-(clr+base/2)+y[0][0])"
    ]
   },
   {
@@ -105,15 +96,7 @@
    "execution_count": 3,
    "id": "cadf1e4a",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "3.675\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "bearing_ht = 0.3 #assumed including pedestal\n",
     "abut = {\n",
@@ -132,9 +115,8 @@
     "    'ttl_stembase_width':1.25+0.10,\n",
     "    'approach_slab_dep':0.3,\n",
     "    'approach_slab_len':3.5,\n",
-    "    'haunch':{'stem_haunch':[0.2,0.25],'approach':[0.25,0.25],'slab_haunch':[0.25,0.25]} #list of width and height.\n",
-    "}\n",
-    "print(abut['stem_ht'])"
+    "    'haunch':{'stem_haunch':[0.2,0.25],'approach_slab_haunch':[[0.25,0.25],[0.25,0.25]]} #list of width and height.\n",
+    "}"
    ]
   },
   {
@@ -189,25 +171,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "id": "26a60d40",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[964.6875, 38.587500000000006, 157.5, 225.225, 10.5, [13.125, 6.5625]]\n",
+      "[-0.05, 0.60833, -0.125, -0.725, -0.74167, [-1.0, -1.0]]\n",
+      "                                  Load     Lever arm              Moment\n",
+      "stem_rect                     964.6875         -0.05          -48.234375\n",
+      "stem_tri                       38.5875       0.60833           23.473934\n",
+      "cap                              157.5        -0.125            -19.6875\n",
+      "backwall                       225.225        -0.725         -163.288125\n",
+      "stem_haunch                       10.5      -0.74167           -7.787535\n",
+      "approach_slab_haunch  [13.125, 6.5625]  [-1.0, -1.0]  [-13.125, -6.5625]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Components = ['stem_rect','stem_tri','cap','backwall','stem_haunch','approach_slab_haunch']\n",
-    "# loads = [loader(unitwt_conc,abut['stem_ht'],abut['width_of_abut'],abut['stem_width']),\n",
-    "#          loader(unitwt_conc,abut['stem_ht'],abut['width_of_abut'],abut['be_taperwidth']),\n",
-    "#          loader(unitwt_conc,abut['cap'],abut['width_of_abut'],abut['cap_width']),\n",
-    "#          loader(unitwt_conc,abut['backw_ht'],abut['width_of_abut'],abut['bw_width']),\n",
-    "#          loader(unitwt_conc,abut['haunch']['stem_haunch'][0],abut['width_of_abut'],abut['haunch']['stem_haunch'][1]),\n",
-    "#          [loader(unitwt_conc,abut['haunch']['approach'][0],abut['width_of_abut'],abut['haunch']['approach'][1]),loader(unitwt_conc,abut['stem_ht'],abut['haunch']['slab_haunch'][0],abut['haunch']['slab_haunch'][1])]]\n",
-    "lever_arm = [z(abut['ttl_stembase_width'],abut['haunch']['stem_haunch'][0],abut['stem_width'],)]"
+    "# comp = ['stem_rect','stem_tri','cap','backwall','stem_haunch','approach_slab_haunch']\n",
+    "loads = [loader(unitwt_conc,abut['stem_ht'],abut['width_of_abut'],abut['stem_width'],'r'),\n",
+    "         loader(unitwt_conc,abut['stem_ht'],abut['width_of_abut'],abut['be_taperwidth'],'t'),\n",
+    "         loader(unitwt_conc,abut['cap'],abut['width_of_abut'],abut['cap_width'],'r'),\n",
+    "         loader(unitwt_conc,abut['backw_ht'],abut['width_of_abut'],abut['bw_width'],'r'),\n",
+    "         loader(unitwt_conc,abut['haunch']['stem_haunch'][0],abut['width_of_abut'],abut['haunch']['stem_haunch'][1],'r'),\n",
+    "         [loader(unitwt_conc,abut['haunch']['approach_slab_haunch'][0][0],abut['width_of_abut'],abut['haunch']['approach_slab_haunch'][0][1],'r'),loader(unitwt_conc,abut['haunch']['approach_slab_haunch'][1][0],abut['width_of_abut'],abut['haunch']['approach_slab_haunch'][1][1],'t')]]\n",
+    "lever_arm = [round(z(abut['ttl_stembase_width'],abut['haunch']['stem_haunch'][0],abut['stem_width'],abut['haunch']['stem_haunch'][0],'r'),5),\n",
+    "            round(z(abut['ttl_stembase_width'],abut['haunch']['stem_haunch'][0],abut['be_taperwidth'],abut['haunch']['stem_haunch'][0]+abut['stem_width'],'t1'),5),\n",
+    "            round(z(abut['ttl_stembase_width'],abut['haunch']['stem_haunch'][0],abut['cap_width'],0,'r'),5),\n",
+    "            round(z(abut['ttl_stembase_width'],abut['haunch']['stem_haunch'][0],abut['bw_width'],0,'r'),5),\n",
+    "            round(z(abut['ttl_stembase_width'],abut['haunch']['stem_haunch'][0],abut['haunch']['stem_haunch'][0],0,'t2'),5),\n",
+    "            [round(z(abut['ttl_stembase_width'],abut['haunch']['stem_haunch'][0],-abut['haunch']['approach_slab_haunch'][0][0],0,'r'),5),\n",
+    "            round(z(abut['ttl_stembase_width'],abut['haunch']['stem_haunch'][0],-abut['haunch']['approach_slab_haunch'][0][1],0,'r'),5)]]\n",
+    "print(loads)\n",
+    "print(lever_arm)\n",
+    "moments = []\n",
+    "for index,i in enumerate(loads):\n",
+    "    if isinstance(i,float)==True:\n",
+    "        moments.append(loads[index]*lever_arm[index])\n",
+    "    elif isinstance(i,list)==True:\n",
+    "        temp=[]\n",
+    "        for j in range(len(i)):\n",
+    "            temp.append(loads[index][j]*lever_arm[index][j])\n",
+    "        moments.append(temp)\n",
+    "A1 = pd.DataFrame({\"Load\":loads,\"Lever arm\":lever_arm,\"Moment\":moments},index = ['Stem(rectangle)','Stem(triangle)','Cap','Backwall','Stem_haunch','approach_slab_haunch'])\n",
+    "print(A1)\n",
+    "            \n",
+    "    \n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e7b95025",
+   "id": "09b9d700",
    "metadata": {},
    "outputs": [],
    "source": []
