Self load moments.

--- a/Abutment.ipynb
+++ b/Abutment.ipynb
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "26a60d40",
    "metadata": {},
    "outputs": [
@@ -182,12 +182,12 @@
       "[964.6875, 38.587500000000006, 157.5, 225.225, 10.5, [13.125, 6.5625]]\n",
       "[-0.05, 0.60833, -0.125, -0.725, -0.74167, [-1.0, -1.0]]\n",
       "                                  Load     Lever arm              Moment\n",
-      "stem_rect                     964.6875         -0.05          -48.234375\n",
-      "stem_tri                       38.5875       0.60833           23.473934\n",
-      "cap                              157.5        -0.125            -19.6875\n",
-      "backwall                       225.225        -0.725         -163.288125\n",
-      "stem_haunch                       10.5      -0.74167           -7.787535\n",
-      "approach_slab_haunch  [13.125, 6.5625]  [-1.0, -1.0]  [-13.125, -6.5625]\n"
+      "Stem(rectangle)               964.6875         -0.05          -48.234375\n",
+      "Stem(triangle)                 38.5875       0.60833           23.473934\n",
+      "Cap                              157.5        -0.125            -19.6875\n",
+      "Backwall                       225.225        -0.725         -163.288125\n",
+      "Stem haunch                       10.5      -0.74167           -7.787535\n",
+      "Approach slab haunch  [13.125, 6.5625]  [-1.0, -1.0]  [-13.125, -6.5625]\n"
      ]
     }
    ],
@@ -217,7 +217,7 @@
     "        for j in range(len(i)):\n",
     "            temp.append(loads[index][j]*lever_arm[index][j])\n",
     "        moments.append(temp)\n",
-    "A1 = pd.DataFrame({\"Load\":loads,\"Lever arm\":lever_arm,\"Moment\":moments},index = ['Stem(rectangle)','Stem(triangle)','Cap','Backwall','Stem_haunch','approach_slab_haunch'])\n",
+    "A1 = pd.DataFrame({\"Load\":loads,\"Lever arm\":lever_arm,\"Moment\":moments},index = ['Stem(rectangle)','Stem(triangle)','Cap','Backwall','Stem haunch','Approach slab haunch'])\n",
     "print(A1)\n",
     "            \n",
     "    \n",
@@ -227,7 +227,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "09b9d700",
+   "id": "3d58d016",
    "metadata": {},
    "outputs": [],
    "source": []
