--- a/prestressed.ipynb
+++ b/prestressed.ipynb
@@ -19,7 +19,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    " span = box['span']"
+    "df=pd.read_excel('Saved Inputs/span.xlsx',index_col=None,header=None)\n",
+    "span = int(df.iloc[2])\n",
+    "no = int(df.iloc[1])\n",
+    "sc=[(j)/(no-1)*50 for j in range(no)]"
    ]
   },
   {
@@ -99,9 +102,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sc=[(j)/8*50 for j in range(9)]\n",
+    "\n",
     "sections = []\n",
-    "for i in range(9):  \n",
+    "for i in range(no):  \n",
     "    section1=Cross_section(length,height)\n",
     "    section1.expansion_width=expansion_calc(span,sc[i],cable)\n",
     "    section1.cableprop=cable.cablepos(sc[i],50)\n",
