--- a/dead_loads.ipynb
+++ b/dead_loads.ipynb
@@ -41,22 +41,26 @@
     "height=df.values.tolist()[0]\n",
     "length=df.values.tolist()[1]\n",
     "\n",
+    "df=pd.read_excel('Saved Inputs/span.xlsx',index_col=None,header=None)\n",
+    "span = int(df.iloc[2])\n",
+    "no = int(df.iloc[1])\n",
     "\n",
+    "\"\"\"\"distance form left of 9 divisions of section\"\"\"\n",
+    "sc=[(j)/(no-1)*50 for j in range(no)]\n",
     "\n",
     "###############################################################################################\n",
     "\"\"\"FOR DEAD LOAD MOMENTS INPUTS\"\"\"\n",
     "\n",
     "\n",
-    "df_bridge=pd.read_excel('outputs/section.xlsx').set_index('Name')\n",
     "\n",
-    "span=60\n",
+    "\n",
     "cw=6\n",
     "l_kerblen=0.6\n",
     "r_kerblen=0.6\n",
-    "area_sum=round(sum(pd.to_numeric(df_bridge.loc[:,'Area'])),5)\n",
     "\n",
-    "\"\"\"\"distance form left of 9 divisions of section\"\"\"\n",
-    "sc=[(j)/8*50 for j in range(9)] \n",
+    "\n",
+    "\n",
+    "\n",
     "\n",
     "loads=[\"PDL\",\"ODL\",\"SIDL\",\"PEDL\"]\n"
    ]
@@ -70,19 +74,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[0.3, 0.89656], [0.3, 1.21984], [0.3, 1.54312], [3.3, 0.89656], [3.3, 1.21984], [3.3, 1.54312], [0.3, 0.25], [0.9, 0.25], [1.5, 0.25], [2.1, 0.25], [2.7, 0.25], [3.3, 0.25], [0.3, 0.57328], [3.3, 0.57328]]\n"
-     ]
-    },
-    {
-     "ename": "NameError",
-     "evalue": "name 'strpdl1' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32mC:\\Users\\MILANJ~1\\AppData\\Local\\Temp/ipykernel_9600/2706497356.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     46\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     47\u001b[0m \u001b[1;31m# excel_export(section)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 48\u001b[1;33m \u001b[0mexcel_loads\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mPDL\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mODL\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mPEDL\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mSIDL\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0msc\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     49\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mD:\\Final year project\\Cross.py\u001b[0m in \u001b[0;36mexcel_loads\u001b[1;34m(PDL, ODL, PEDL, SIDL, sc)\u001b[0m\n\u001b[0;32m    615\u001b[0m     \u001b[1;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mPDL\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    616\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 617\u001b[1;33m         \u001b[0mstrpdl1\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mPDL\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mstress\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    618\u001b[0m         \u001b[0mstrpdl2\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mPDL\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mstress\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    619\u001b[0m         \u001b[0mstrodl1\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mODL\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mstress\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'strpdl1' is not defined"
+      "                   0             1             2             3           4  \\\n",
+      "Section at       0.0      6.250000     12.500000     18.750000     25.0000   \n",
+      "Dead Load        0.0  26772.949219  45896.484375  57370.605469  61195.3125   \n",
+      "Other Loads      0.0   1777.343750   3046.875000   3808.593750   4062.5000   \n",
+      "Surface Loads    0.0   1173.046875   2010.937500   2513.671875   2681.2500   \n",
+      "Pedestrian Load  0.0    820.312500   1406.250000   1757.812500   1875.0000   \n",
+      "\n",
+      "                            5             6             7     8  \n",
+      "Section at          31.250000     37.500000     43.750000  50.0  \n",
+      "Dead Load        57370.605469  45896.484375  26772.949219   0.0  \n",
+      "Other Loads       3808.593750   3046.875000   1777.343750   0.0  \n",
+      "Surface Loads     2513.671875   2010.937500   1173.046875   0.0  \n",
+      "Pedestrian Load   1757.812500   1406.250000    820.312500   0.0  \n",
+      "26772.949218750007\n"
      ]
     }
    ],
@@ -97,9 +102,9 @@
     "\n",
     "\"\"\"Assigning section with cable \"\"\"\n",
     "section1=Cross_section(length,height)\n",
-    "section1.cableprop=cables(35,14,section).cablepos(6,50)\n",
+    "section1.cableprop=cables(35,14,section).cablepos(0,50)\n",
     "\n",
-    "print(section1.cableprop)\n",
+    "# print(section1.cableprop)\n",
     "\n",
     "\n",
     "I=[]\n",
@@ -135,15 +140,9 @@
     "\n",
     "# excel_export(section)\n",
     "excel_loads(PDL,ODL,PEDL,SIDL,sc)\n",
-    "\n"
+    "\n",
+    "print(PDL[1].BM)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -151,7 +150,7 @@
    "hash": "57e1b559dacf43725e1ed3764b0ee83225f8bdeeef0b183e08a2c01330bea852"
   },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.8.6 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -165,8 +164,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.1"
-  }
+   "version": "3.8.6"
+  },
+  "orig_nbformat": 4
  },
  "nbformat": 4,
  "nbformat_minor": 2
