--- a/calculation.ipynb
+++ b/calculation.ipynb
@@ -55,7 +55,7 @@
     "if False:\n",
     "    allinput()\n",
     "\n",
-    "df=pd.read_excel('Saved Inputs/span.xlsx',index_col=None,header=None)\n",
+    "df=pd.read_excel('data/span.xlsx',index_col=None,header=None)\n",
     "span = int(df.iloc[2])\n",
     "\n",
     "c_c = 1.5"
