--- a/prestressed.ipynb
+++ b/prestressed.ipynb
@@ -19,7 +19,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df=pd.read_excel('Saved Inputs/span.xlsx',index_col=None,header=None)\n",
+    "df=pd.read_excel('data/span.xlsx',index_col=None,header=None)\n",
     "span = int(df.iloc[2])\n",
     "no = int(df.iloc[1])\n",
     "sc=[(j)/(no-1)*50 for j in range(no)]"
@@ -76,7 +76,7 @@
     "if False:\n",
     "    allinput()\n",
     "\n",
-    "df=pd.read_excel('Saved Inputs/box.xlsx',index_col=None,header=None)\n",
+    "df=pd.read_excel('data/box.xlsx',index_col=None,header=None)\n",
     "\n",
     "\n",
     "height=df.values.tolist()[0]\n",
