--- a/calculation.ipynb
+++ b/calculation.ipynb
@@ -18,7 +18,7 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "# import matplotlib.pyplot as plt\n",
-    "\n",
+    "from allinput import main_input\n",
     "from irc6_2007 import *\n",
     "\n",
     "from reaction import find_bm, find_sf, find_ra, find_rb\n",
@@ -35,25 +35,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "id": "e36334be",
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "50\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "if False:\n",
-    "    allinput()\n",
+    "    main_input()\n",
     "\n",
     "df=pd.read_excel('data/span.xlsx',index_col=None,header=None)\n",
     "span = int(df.iloc[2])\n",
