--- a/dead_loads.ipynb
+++ b/dead_loads.ipynb
@@ -11,7 +11,8 @@
     "from reaction import bm_udl\n",
     "from irc6_2007 import ped_ll\n",
     "import math\n",
-    "from Cross import Cross_section,cables,Dead_Load,expansion_calc,excel_loads"
+    "from Cross import Cross_section,cables,Dead_Load,expansion_calc,excel_loads\n",
+    "from allinput import main_input"
    ]
   },
   {
@@ -50,7 +51,7 @@
     "\"\"\"GUI INPUT OF BRIDGE SECTION LENGTHS AND HEIGHTS\"\"\"\n",
     "\n",
     "if False:\n",
-    "    allinput()\n",
+    "    main_input()\n",
     "\n",
     "df=pd.read_excel('data/box.xlsx',index_col=None,header=None)\n",
     "\n",
