--- a/prestressed.ipynb
+++ b/prestressed.ipynb
@@ -9,7 +9,8 @@
    "source": [
     "import pandas as pd\n",
     "from Cross import Cross_section,cables, expansion_calc\n",
-    "from bridge_specs import box"
+    "from bridge_specs import box\n",
+    "from allinput import main_input"
    ]
   },
   {
@@ -74,7 +75,7 @@
     "\"\"\"GUI INPUT OF BRIDGE SECTION LENGTHS AND HEIGHTS\"\"\"\n",
     "\n",
     "if False:\n",
-    "    allinput()\n",
+    "    main_input()\n",
     "\n",
     "df=pd.read_excel('data/box.xlsx',index_col=None,header=None)\n",
     "\n",
