Self load moments updated

--- a/Abutment.ipynb
+++ b/Abutment.ipynb
@@ -115,7 +115,7 @@
     "    'ttl_stembase_width':1.25+0.10,\n",
     "    'approach_slab_dep':0.3,\n",
     "    'approach_slab_len':3.5,\n",
-    "    'haunch':{'stem_haunch':[0.2,0.25],'approach_slab_haunch':[[0.25,0.25],[0.25,0.25]]} #list of width and height.\n",
+    "    'haunch':{'stem_haunch':[0.2,0.25],'approach_slab_haunch_rec':[0.25,0.25], 'approach_slab_haunch_tri':[0.25,0.25]} #list of width and height.\n",
     "}"
    ]
   },
@@ -171,24 +171,103 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "id": "26a60d40",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[964.6875, 38.587500000000006, 157.5, 225.225, 10.5, [13.125, 6.5625]]\n",
-      "[-0.05, 0.60833, -0.125, -0.725, -0.74167, [-1.0, -1.0]]\n",
-      "                                  Load     Lever arm              Moment\n",
-      "Stem(rectangle)               964.6875         -0.05          -48.234375\n",
-      "Stem(triangle)                 38.5875       0.60833           23.473934\n",
-      "Cap                              157.5        -0.125            -19.6875\n",
-      "Backwall                       225.225        -0.725         -163.288125\n",
-      "Stem haunch                       10.5      -0.74167           -7.787535\n",
-      "Approach slab haunch  [13.125, 6.5625]  [-1.0, -1.0]  [-13.125, -6.5625]\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Load</th>\n",
+       "      <th>Lever arm</th>\n",
+       "      <th>Moment</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Stem(rectangle)</th>\n",
+       "      <td>964.6875</td>\n",
+       "      <td>-0.05000</td>\n",
+       "      <td>-48.234375</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Stem(triangle)</th>\n",
+       "      <td>38.5875</td>\n",
+       "      <td>0.60833</td>\n",
+       "      <td>23.473934</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Cap</th>\n",
+       "      <td>157.5000</td>\n",
+       "      <td>-0.12500</td>\n",
+       "      <td>-19.687500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Backwall</th>\n",
+       "      <td>225.2250</td>\n",
+       "      <td>-0.72500</td>\n",
+       "      <td>-163.288125</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Stem haunch</th>\n",
+       "      <td>10.5000</td>\n",
+       "      <td>-0.74167</td>\n",
+       "      <td>-7.787535</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Approach slab haunch(rec)</th>\n",
+       "      <td>13.1250</td>\n",
+       "      <td>-1.00000</td>\n",
+       "      <td>-13.125000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Approach slab haunch(tri)</th>\n",
+       "      <td>6.5625</td>\n",
+       "      <td>-1.04167</td>\n",
+       "      <td>-6.835959</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Total</th>\n",
+       "      <td>1416.1875</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-235.484560</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                Load  Lever arm      Moment\n",
+       "Stem(rectangle)             964.6875   -0.05000  -48.234375\n",
+       "Stem(triangle)               38.5875    0.60833   23.473934\n",
+       "Cap                         157.5000   -0.12500  -19.687500\n",
+       "Backwall                    225.2250   -0.72500 -163.288125\n",
+       "Stem haunch                  10.5000   -0.74167   -7.787535\n",
+       "Approach slab haunch(rec)    13.1250   -1.00000  -13.125000\n",
+       "Approach slab haunch(tri)     6.5625   -1.04167   -6.835959\n",
+       "Total                      1416.1875        NaN -235.484560"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -198,36 +277,36 @@
     "         loader(unitwt_conc,abut['cap'],abut['width_of_abut'],abut['cap_width'],'r'),\n",
     "         loader(unitwt_conc,abut['backw_ht'],abut['width_of_abut'],abut['bw_width'],'r'),\n",
     "         loader(unitwt_conc,abut['haunch']['stem_haunch'][0],abut['width_of_abut'],abut['haunch']['stem_haunch'][1],'r'),\n",
-    "         [loader(unitwt_conc,abut['haunch']['approach_slab_haunch'][0][0],abut['width_of_abut'],abut['haunch']['approach_slab_haunch'][0][1],'r'),loader(unitwt_conc,abut['haunch']['approach_slab_haunch'][1][0],abut['width_of_abut'],abut['haunch']['approach_slab_haunch'][1][1],'t')]]\n",
+    "         loader(unitwt_conc,abut['haunch']['approach_slab_haunch_rec'][0],abut['width_of_abut'],abut['haunch']['approach_slab_haunch_rec'][1],'r'),\n",
+    "          loader(unitwt_conc,abut['haunch']['approach_slab_haunch_tri'][0],abut['width_of_abut'],abut['haunch']['approach_slab_haunch_tri'][1],'t')]\n",
     "lever_arm = [round(z(abut['ttl_stembase_width'],abut['haunch']['stem_haunch'][0],abut['stem_width'],abut['haunch']['stem_haunch'][0],'r'),5),\n",
     "            round(z(abut['ttl_stembase_width'],abut['haunch']['stem_haunch'][0],abut['be_taperwidth'],abut['haunch']['stem_haunch'][0]+abut['stem_width'],'t1'),5),\n",
     "            round(z(abut['ttl_stembase_width'],abut['haunch']['stem_haunch'][0],abut['cap_width'],0,'r'),5),\n",
     "            round(z(abut['ttl_stembase_width'],abut['haunch']['stem_haunch'][0],abut['bw_width'],0,'r'),5),\n",
     "            round(z(abut['ttl_stembase_width'],abut['haunch']['stem_haunch'][0],abut['haunch']['stem_haunch'][0],0,'t2'),5),\n",
-    "            [round(z(abut['ttl_stembase_width'],abut['haunch']['stem_haunch'][0],-abut['haunch']['approach_slab_haunch'][0][0],0,'r'),5),\n",
-    "            round(z(abut['ttl_stembase_width'],abut['haunch']['stem_haunch'][0],-abut['haunch']['approach_slab_haunch'][0][1],0,'r'),5)]]\n",
-    "print(loads)\n",
-    "print(lever_arm)\n",
+    "            round(z(abut['ttl_stembase_width'],abut['haunch']['stem_haunch'][0],-abut['haunch']['approach_slab_haunch_rec'][0],0,'r'),5),\n",
+    "            round(z(abut['ttl_stembase_width'],abut['haunch']['stem_haunch'][0],-abut['haunch']['approach_slab_haunch_tri'][0],0,'t2'),5)]\n",
     "moments = []\n",
     "for index,i in enumerate(loads):\n",
     "    if isinstance(i,float)==True:\n",
     "        moments.append(loads[index]*lever_arm[index])\n",
-    "    elif isinstance(i,list)==True:\n",
-    "        temp=[]\n",
-    "        for j in range(len(i)):\n",
-    "            temp.append(loads[index][j]*lever_arm[index][j])\n",
-    "        moments.append(temp)\n",
-    "A1 = pd.DataFrame({\"Load\":loads,\"Lever arm\":lever_arm,\"Moment\":moments},index = ['Stem(rectangle)','Stem(triangle)','Cap','Backwall','Stem haunch','Approach slab haunch'])\n",
-    "print(A1)\n",
-    "            \n",
-    "    \n",
-    "    "
+    "A1 = pd.DataFrame({\"Load\":loads,\"Lever arm\":lever_arm,\"Moment\":moments},index = ['Stem(rectangle)','Stem(triangle)','Cap','Backwall','Stem haunch','Approach slab haunch(rec)','Approach slab haunch(tri)'])\n",
+    "A1.loc[len(A1.index)] = [A1['Load'].sum(),None,A1['Moment'].sum()]\n",
+    "display(A1.rename(index={7:'Total'}))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "3d58d016",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cbb489d5",
    "metadata": {},
    "outputs": [],
    "source": []
