--- a/Abutment.ipynb
+++ b/Abutment.ipynb
@@ -137,7 +137,8 @@
     "#dummy loads\n",
     "dl = 3000 #dead loads\n",
     "ll = 1000 #live loads including impact\n",
-    "pdl = 200 #pedestrian loads"
+    "pdl = 200 #pedestrian loads\n",
+    "sdl=250 #Surface Loads"
    ]
   },
   {
@@ -171,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "26a60d40",
    "metadata": {},
    "outputs": [
@@ -288,25 +289,102 @@
     "            round(z(abut['ttl_stembase_width'],abut['haunch']['stem_haunch'][0],-abut['haunch']['approach_slab_haunch_tri'][0],0,'t2'),5)]\n",
     "moments = []\n",
     "for index,i in enumerate(loads):\n",
-    "    if isinstance(i,float)==True:\n",
-    "        moments.append(loads[index]*lever_arm[index])\n",
+    "    moments.append(loads[index]*lever_arm[index])\n",
     "A1 = pd.DataFrame({\"Load\":loads,\"Lever arm\":lever_arm,\"Moment\":moments},index = ['Stem(rectangle)','Stem(triangle)','Cap','Backwall','Stem haunch','Approach slab haunch(rec)','Approach slab haunch(tri)'])\n",
     "A1.loc[len(A1.index)] = [A1['Load'].sum(),None,A1['Moment'].sum()]\n",
     "display(A1.rename(index={7:'Total'}))"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3d58d016",
+   "cell_type": "markdown",
+   "id": "4e66066b",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Loads from superstructure"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "0b21359c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Load</th>\n",
+       "      <th>Lever arm</th>\n",
+       "      <th>Moment</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Dead load</th>\n",
+       "      <td>3000</td>\n",
+       "      <td>0.025</td>\n",
+       "      <td>75.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Live load</th>\n",
+       "      <td>1200</td>\n",
+       "      <td>0.025</td>\n",
+       "      <td>30.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Surface load</th>\n",
+       "      <td>250</td>\n",
+       "      <td>0.025</td>\n",
+       "      <td>6.25</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              Load  Lever arm  Moment\n",
+       "Dead load     3000      0.025   75.00\n",
+       "Live load     1200      0.025   30.00\n",
+       "Surface load   250      0.025    6.25"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "load = [dl,ll+pdl,sdl]\n",
+    "arm = [round(z(abut['ttl_stembase_width'],abut['haunch']['stem_haunch'][0],abut['edge_to_bearing_c']+abut['bw_to_bearing_c'],abut['bw_width'],'r'),5),\n",
+    "      round(z(abut['ttl_stembase_width'],abut['haunch']['stem_haunch'][0],abut['edge_to_bearing_c']+abut['bw_to_bearing_c'],abut['bw_width'],'r'),5),\n",
+    "      round(z(abut['ttl_stembase_width'],abut['haunch']['stem_haunch'][0],abut['edge_to_bearing_c']+abut['bw_to_bearing_c'],abut['bw_width'],'r'),5)]\n",
+    "moment = []\n",
+    "for index,i in enumerate(load):\n",
+    "    moment.append(load[index]*arm[index])\n",
+    "A2 = pd.DataFrame({'Load':load, 'Lever arm':arm,'Moment':moment}, index = ['Dead load','Live load','Surface load'])\n",
+    "display(A2)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cbb489d5",
+   "id": "f4d6c21c",
    "metadata": {},
    "outputs": [],
    "source": []
