--- a/Abutment.ipynb
+++ b/Abutment.ipynb
@@ -45,6 +45,7 @@
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
+    "import math\n",
     "from bridge_specs import box\n",
     "from Cross import calc_centroid as cg\n"
    ]
@@ -305,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "0b21359c",
    "metadata": {},
    "outputs": [
@@ -382,9 +383,130 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "5772d76b",
+   "metadata": {},
+   "source": [
+    "Earth Pressure as per clause 214 of IRC:6"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "a813f44c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "phi = 33 #Angle of internal friction of soil\n",
+    "alpha = 0 #Angle which earth face of the wal makes with the vertical of the wall\n",
+    "beta = 0 #Slope of earth fill\n",
+    "delta = 2/3*phi if 2/3*phi<22.5 else 22.5 #Angle of friction between earth and earth fill\n",
+    "h = abut['total_ht']-abut['approach_slab_dep'] #Height of earthfill\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "48bbd103",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.26446\n"
+     ]
+    }
+   ],
+   "source": [
+    "def ka(a,b,d,p):\n",
+    "    \"\"\" Returns the coefficient of active earth pressure Ka estimated based on Coulomb earth pressure theory.\"\"\"\n",
+    "    k = (pow(math.cos(math.radians(p-a)),2)/((pow(math.cos(math.radians(a)),2))*math.cos(math.radians(d+a))))*pow((1/(1+pow((math.sin(math.radians(p+d))*math.sin(math.radians(p-b)))/(math.cos(math.radians(a-b))*math.cos(math.radians(d+a))),0.5))),2)\n",
+    "    return round(k,5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "b742f781",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Force(KN)</th>\n",
+       "      <th>Lever arm(m)</th>\n",
+       "      <th>Moment(KNm)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Earth pressure Hz(dry)</th>\n",
+       "      <td>924.601823</td>\n",
+       "      <td>2.814</td>\n",
+       "      <td>2601.829531</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Earth pressure Hz(wet)</th>\n",
+       "      <td>924.601823</td>\n",
+       "      <td>2.211</td>\n",
+       "      <td>2044.294631</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Earth pressure Ver</th>\n",
+       "      <td>373.563385</td>\n",
+       "      <td>-0.675</td>\n",
+       "      <td>-252.155285</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                         Force(KN)  Lever arm(m)  Moment(KNm)\n",
+       "Earth pressure Hz(dry)  924.601823         2.814  2601.829531\n",
+       "Earth pressure Hz(wet)  924.601823         2.211  2044.294631\n",
+       "Earth pressure Ver      373.563385        -0.675  -252.155285"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "ep = unitwt_bfill*h*ka(alpha, beta, delta, phi) #Earth pressure in KN/m^2.\n",
+    "force = 0.5*ep*abut['width_of_abut']*h #Force due to earth pressure in KN.\n",
+    "forc = [force*math.cos(math.radians(delta)),force*math.cos(math.radians(delta)),force*math.sin(math.radians(delta))] #Horizontal and vertical components.\n",
+    "larm = [0.42*h, 0.33*h, -(abut['stem_width']+abut['be_taperwidth'])/2 ] #0.42 times height of wall above base for dry soil and 0.33 for wet.\n",
+    "momen = []\n",
+    "for index,i in enumerate(forc):\n",
+    "    momen.append(forc[index]*larm[index])\n",
+    "A3 = pd.DataFrame({'Force(KN)':forc, 'Lever arm(m)':larm,'Moment(KNm)':momen}, index = ['Earth pressure Hz(dry)','Earth pressure Hz(wet)','Earth pressure Ver'])\n",
+    "display(A3)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f4d6c21c",
+   "id": "15ac92b0",
    "metadata": {},
    "outputs": [],
    "source": []
