--- a/dead_loads.ipynb
+++ b/dead_loads.ipynb
@@ -168,7 +168,7 @@
    "hash": "57e1b559dacf43725e1ed3764b0ee83225f8bdeeef0b183e08a2c01330bea852"
   },
   "kernelspec": {
-   "display_name": "Python 3.8.6 64-bit",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -182,9 +182,8 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.6"
-  },
-  "orig_nbformat": 4
+   "version": "3.10.0"
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
