--- a/direct_stiffness.ipynb
+++ b/direct_stiffness.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "id": "d09b14ee",
    "metadata": {},
    "outputs": [],
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "id": "a024082c",
    "metadata": {},
    "outputs": [],
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "id": "b7ac486c",
    "metadata": {
     "scrolled": true
@@ -113,8 +113,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "1ee1d4fb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "k2 = k(1, 1, 1, l = 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "2516c8b2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0.5,  0. ,  0. , -0.5,  0. ,  0. ],\n",
+       "       [ 0. ,  1.5,  1.5,  0. , -1.5,  1.5],\n",
+       "       [ 0. ,  1.5,  2. ,  0. , -1.5,  1. ],\n",
+       "       [-0.5,  0. ,  0. ,  0.5,  0. ,  0. ],\n",
+       "       [ 0. , -1.5, -1.5,  0. ,  1.5, -1.5],\n",
+       "       [ 0. ,  1.5,  1. ,  0. , -1.5,  2. ]])"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "k2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c2050fc3",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -122,7 +158,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -136,7 +172,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.10.0"
   }
  },
  "nbformat": 4,
