--- a/prestressed.ipynb
+++ b/prestressed.ipynb
@@ -2,10 +2,57 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "ba6ea02b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                     Length  Height      Position     Area      Centroid  \\\n",
+      "Name                                                                       \n",
+      "left Pillar            0.60    3.20    [3.5, 3.5]  1.92000    [3.8, 5.1]   \n",
+      "right pillar           0.60    3.20    [6.5, 3.5]  1.92000    [6.8, 5.1]   \n",
+      "bottom slab            2.40    0.50    [4.1, 3.5]  1.20000   [5.3, 3.75]   \n",
+      "top slab               2.40    0.30    [4.1, 6.4]  0.72000   [5.3, 6.55]   \n",
+      "left cantilever        1.80    0.15   [1.7, 6.55]  0.27000  [2.6, 6.625]   \n",
+      "right cantilever       1.80    0.15   [7.1, 6.55]  0.27000  [8.0, 6.625]   \n",
+      "left triangle          1.80    0.30   [1.7, 6.25]  0.27000   [2.9, 6.45]   \n",
+      "right triangle         1.80    0.30   [7.1, 6.25]  0.27000   [7.7, 6.45]   \n",
+      "left top fillet        0.45    0.15   [4.1, 6.25]  0.03375  [4.25, 6.35]   \n",
+      "right top fillet       0.45    0.15  [6.05, 6.25]  0.03375  [6.35, 6.35]   \n",
+      "left bottom fillet     0.45    0.15    [4.1, 4.0]  0.03375  [4.25, 4.05]   \n",
+      "right bottom fillet    0.45    0.15   [6.05, 4.0]  0.03375  [6.35, 4.05]   \n",
+      "\n",
+      "                                    I                   Ah2 Object Type  \n",
+      "Name                                                                     \n",
+      "left Pillar          [1.6384, 0.0576]      [0.038679, 4.32]   rectangle  \n",
+      "right pillar         [1.6384, 0.0576]      [0.038679, 4.32]   rectangle  \n",
+      "bottom slab            [0.025, 0.576]       [2.671044, 0.0]   rectangle  \n",
+      "top slab             [0.0054, 0.3456]       [1.231945, 0.0]   rectangle  \n",
+      "left cantilever      [0.0005, 0.0729]    [0.516475, 1.9683]   rectangle  \n",
+      "right cantilever     [0.0005, 0.0729]    [0.516475, 1.9683]   rectangle  \n",
+      "left triangle        [0.0013, 0.0486]    [0.394044, 1.5552]  triangle_1  \n",
+      "right triangle       [0.0013, 0.0486]    [0.394044, 1.5552]  triangle_3  \n",
+      "left top fillet         [0.0, 0.0004]  [0.041439, 0.037209]  triangle_3  \n",
+      "right top fillet        [0.0, 0.0004]  [0.041439, 0.037209]  triangle_1  \n",
+      "left bottom fillet      [0.0, 0.0004]  [0.047949, 0.037209]  triangle_2  \n",
+      "right bottom fillet     [0.0, 0.0004]  [0.047949, 0.037209]  triangle_4  \n"
+     ]
+    },
+    {
+     "ename": "ImportError",
+     "evalue": "cannot import name 'span' from 'bridge_specs' (C:\\Users\\bisha\\PycharmProjects\\PSC_bridge\\bridge_specs.py)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_16840/438088493.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mpandas\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mpd\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mCross\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mCross_section\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mcables\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mexpansion_calc\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \u001b[1;32mfrom\u001b[0m \u001b[0mbridge_specs\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mbox\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mspan\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      4\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mallinput\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mmain_input\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mImportError\u001b[0m: cannot import name 'span' from 'bridge_specs' (C:\\Users\\bisha\\PycharmProjects\\PSC_bridge\\bridge_specs.py)"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "from Cross import Cross_section,cables, expansion_calc\n",
@@ -460,7 +507,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.1"
+   "version": "3.10.0"
   }
  },
  "nbformat": 4,
