--- a/Abutment.ipynb
+++ b/Abutment.ipynb
@@ -11,7 +11,9 @@
     "import numpy as np\n",
     "import math\n",
     "from bridge_specs import box\n",
-    "from Cross import calc_centroid as cg\n"
+    "from Cross import calc_centroid as cg\n",
+    "from irc6_2007 import ka\n",
+    "\n"
    ]
   },
   {
@@ -366,27 +368,6 @@
     "beta = 0 #Slope of earth fill\n",
     "delta = 2/3*phi if 2/3*phi<22.5 else 22.5 #Angle of friction between earth and earth fill\n",
     "h = abut['total_ht']-abut['approach_slab_dep'] #Height of earthfill\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "id": "48bbd103",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.26446\n"
-     ]
-    }
-   ],
-   "source": [
-    "def ka(a,b,d,p):\n",
-    "    \"\"\" Returns the coefficient of active earth pressure Ka estimated based on Coulomb earth pressure theory.\"\"\"\n",
-    "    k = (pow(math.cos(math.radians(p-a)),2)/((pow(math.cos(math.radians(a)),2))*math.cos(math.radians(d+a))))*pow((1/(1+pow((math.sin(math.radians(p+d))*math.sin(math.radians(p-b)))/(math.cos(math.radians(a-b))*math.cos(math.radians(d+a))),0.5))),2)\n",
-    "    return round(k,5)"
    ]
   },
   {
