--- a/calculation.ipynb
+++ b/calculation.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 1,
    "id": "b1c4bd7c",
    "metadata": {},
    "outputs": [],
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 2,
    "id": "e36334be",
    "metadata": {
     "pycharm": {
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 3,
    "id": "7021ab02",
    "metadata": {},
    "outputs": [],
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 4,
    "id": "70aec980",
    "metadata": {},
    "outputs": [],
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 5,
    "id": "3ec70ad1",
    "metadata": {},
    "outputs": [],
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 6,
    "id": "eeb374fb",
    "metadata": {},
    "outputs": [],
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 7,
    "id": "3f1b5cb6",
    "metadata": {},
    "outputs": [],
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 8,
    "id": "efcaaba5",
    "metadata": {},
    "outputs": [],
@@ -253,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 9,
    "id": "cc5bb796",
    "metadata": {},
    "outputs": [],
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 10,
    "id": "5080febe",
    "metadata": {},
    "outputs": [],
@@ -299,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 11,
    "id": "2657c077",
    "metadata": {},
    "outputs": [],
@@ -318,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 12,
    "id": "3620ecd7",
    "metadata": {
     "pycharm": {
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 13,
    "id": "8da0042b",
    "metadata": {
     "scrolled": true
@@ -363,13 +363,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 40,
    "id": "1c8ee32c",
    "metadata": {},
    "outputs": [],
    "source": [
     "pier_width = 1.6 #input\n",
-    "pier_height_hfl = 7 #input"
+    "pier_height_hfl = 7 #input\n",
+    "\n",
+    "pier_length_rect = 3 #input\n",
+    "pier_width_rect = pier_width\n",
+    "\n",
+    "diameter = pier_width"
    ]
   },
   {
@@ -377,7 +382,7 @@
    "id": "1420d6ae",
    "metadata": {},
    "source": [
-    "**live load components**"
+    "### **live load components**"
    ]
   },
   {
@@ -433,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 16,
    "id": "f01895b9",
    "metadata": {
     "pycharm": {
@@ -528,7 +533,7 @@
        "      Class 70RT    0.0000  688.8700   56.08   688.8700"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -541,48 +546,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 17,
    "id": "ca1f4b44",
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'transpose' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_20264/469844413.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mtotal_frame\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mloc\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'MaxSF'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'RL'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'RR'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'sum'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdot\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtranspose\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcombination_val\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m: name 'transpose' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "total_frame.loc['MaxSF'][['RL', 'RR', 'sum']].T.dot(combination_val)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "96d5a4c9",
-   "metadata": {},
-   "source": [
-    "**Seismic**"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "a6a4da69",
-   "metadata": {},
-   "source": [
-    "importing dead load"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "id": "6ff1f421",
    "metadata": {
     "scrolled": true
    },
@@ -608,58 +573,74 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Unnamed: 0</th>\n",
-       "      <th>RL</th>\n",
-       "      <th>RR</th>\n",
-       "      <th>Sum</th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Dead Load</td>\n",
-       "      <td>625.0</td>\n",
-       "      <td>625.0</td>\n",
-       "      <td>1250.0</td>\n",
+       "      <th>RL</th>\n",
+       "      <td>496.8016</td>\n",
+       "      <td>234.476</td>\n",
+       "      <td>350.066</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Other Load</td>\n",
-       "      <td>325.0</td>\n",
-       "      <td>325.0</td>\n",
-       "      <td>650.0</td>\n",
+       "      <th>RR</th>\n",
+       "      <td>925.8704</td>\n",
+       "      <td>927.124</td>\n",
+       "      <td>354.616</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Surface Load</td>\n",
-       "      <td>214.5</td>\n",
-       "      <td>214.5</td>\n",
-       "      <td>429.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Pedestrian load</td>\n",
-       "      <td>150.0</td>\n",
-       "      <td>150.0</td>\n",
-       "      <td>300.0</td>\n",
+       "      <th>sum</th>\n",
+       "      <td>1422.6720</td>\n",
+       "      <td>1161.600</td>\n",
+       "      <td>704.682</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "        Unnamed: 0     RL     RR     Sum\n",
-       "0        Dead Load  625.0  625.0  1250.0\n",
-       "1       Other Load  325.0  325.0   650.0\n",
-       "2     Surface Load  214.5  214.5   429.0\n",
-       "3  Pedestrian load  150.0  150.0   300.0"
+       "             0         1        2\n",
+       "RL    496.8016   234.476  350.066\n",
+       "RR    925.8704   927.124  354.616\n",
+       "sum  1422.6720  1161.600  704.682"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
+   "source": [
+    "total_frame.loc['MaxSF'][['RL', 'RR', 'sum']].T.dot(combination_val)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "96d5a4c9",
+   "metadata": {},
+   "source": [
+    "### **Seismic**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a6a4da69",
+   "metadata": {},
+   "source": [
+    "importing dead load"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "6ff1f421",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
    "source": [
     "dead=pd.read_csv('outputs/DL_for_Seismic.csv')"
    ]
@@ -682,7 +663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 19,
    "id": "f91e762f",
    "metadata": {},
    "outputs": [],
@@ -701,7 +682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 20,
    "id": "25a19821",
    "metadata": {},
    "outputs": [],
@@ -721,7 +702,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 21,
    "id": "343594bc",
    "metadata": {},
    "outputs": [],
@@ -740,7 +721,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 22,
    "id": "69908e5e",
    "metadata": {},
    "outputs": [],
@@ -751,25 +732,71 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0f345a6a",
+   "cell_type": "markdown",
+   "id": "6ccaf0eb",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "**MoI Calculations**"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "id": "0fd02710",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "moi = lambda i, a, h : i + a*h**2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "92c42d61",
+   "metadata": {},
+   "source": [
+    "longitudinal direction"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "b93297f1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a1 = 0.5*math.pi*(diameter**2)/4\n",
+    "i1 = (math.pi*(diameter/2)**4)/8\n",
+    "\n",
+    "a2 = pier_length_rect*pier_width_rect\n",
+    "i2 = (pier_length_rect*pier_width_rect**3)/12\n",
+    "\n",
+    "a3 = 0.5*math.pi*(diameter**2)/4\n",
+    "i3 = (math.pi*(diameter/2)**4)/8"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "e836ac71",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3.141592653589793"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "79212899",
+   "id": "d2d8deb9",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -777,7 +804,23 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b93297f1",
+   "id": "78184adf",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8d6493c7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cd4c8516",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -792,7 +835,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "9a2415d0",
    "metadata": {},
    "outputs": [],
@@ -810,7 +853,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "29e67947",
    "metadata": {},
    "outputs": [],
@@ -830,7 +873,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "30137fde",
    "metadata": {},
    "outputs": [],
@@ -865,7 +908,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": null,
    "id": "3495173d",
    "metadata": {},
    "outputs": [],
@@ -899,7 +942,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": null,
    "id": "2051ed56",
    "metadata": {},
    "outputs": [],
@@ -920,7 +963,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": null,
    "id": "18811554",
    "metadata": {},
    "outputs": [],
