--- a/Abutment.ipynb
+++ b/Abutment.ipynb
@@ -372,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 9,
    "id": "b742f781",
    "metadata": {},
    "outputs": [
@@ -449,9 +449,91 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f12dfbbd",
+   "metadata": {},
+   "source": [
+    "Braking"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "34d5d0a5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "wt_70r = 1000 #Weight of 70R vehicle in KN.\n",
+    "classa_wt = 554 #Weight of Class A in KN.\n",
+    "pt = 1.2 #Point of application of load above the deck in m.\n",
+    "factor = 0.2 #Lane fact as per clause 211.2 of IRC 6"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "a616f598",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Force(KN)</th>\n",
+       "      <th>Lever arm(m)</th>\n",
+       "      <th>Moment(KNm)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Braking load</th>\n",
+       "      <td>221.6</td>\n",
+       "      <td>1.7</td>\n",
+       "      <td>376.72</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              Force(KN)  Lever arm(m)  Moment(KNm)\n",
+       "Braking load      221.6           1.7       376.72"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "\n",
+    "F = [1*wt_70r*factor, 2*classa_wt*factor]\n",
+    "la = pt+abut['tota']\n",
+    "m = max(F)*la\n",
+    "A3 = pd.DataFrame({'Force(KN)':max(F), 'Lever arm(m)':la,'Moment(KNm)':m}, index = ['Braking load'])\n",
+    "display(A3)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "15ac92b0",
+   "id": "208c1a5b",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -473,7 +555,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.6"
+   "version": "3.8.1"
   }
  },
  "nbformat": 4,
